--- a/default.config
+++ b/default.config
@@ -1,5 +1,7 @@
 {
   "videos": "videos",
+  "mapping": "mapping.csv",
+  "data":"data",
   "confidence": 0.7,
   "model": "yolo11x.pt",
   "tracking_mode": true,
