--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+.DS_Store
 .Python
 data/
 videos/
@@ -31,6 +32,7 @@ MANIFEST
 
 # Model files
 yolo11x.pt
+mapping.csv
 
 # Instance specific files
 config
