--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ fsspec==2025.5.1
 idna==3.10
 importlib_resources==6.5.2
 Jinja2==3.1.6
+kaleido==0.2.1
 kiwisolver==1.4.7
+lap==0.5.12
 MarkupSafe==3.0.2
 matplotlib==3.9.4
 mpmath==1.3.0
@@ -23,6 +25,7 @@ pillow==11.2.1
 plotly==6.1.2
 psutil==7.0.0
 py-cpuinfo==9.0.0
+pycountry==24.6.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
