added information about video

--- a/default.config
+++ b/default.config
@@ -2,6 +2,7 @@
   "videos": "videos",
   "mapping": "mapping.csv",
   "data":"data",
+  "snaps": "readme",
   "confidence": 0.7,
   "model": "yolo11x.pt",
   "tracking_mode": true,
